--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 .img-gallery img {
   width: 100%;
   /* filter: grayscale(100%); */
-  border-radius: 5px;
+  /* border-radius: 5px; */
   transition: all .25s ease-in-out;
 }
 .row.padding-0 {
@@ -69,13 +69,15 @@
 h1.headline-txt{
  margin-bottom: 1em; 
 }
-
+.headtxt{
+  color: #ffffff;
+}
 .header {
 	/* background: url('http://www.autodatz.com/wp-content/uploads/2017/05/Old-Car-Wallpapers-Hd-36-with-Old-Car-Wallpapers-Hd.jpg'); */
-  background-image: url(https://cdn.pixabay.com/photo/2017/10/10/07/48/hills-2836301_1280.jpg);
+  background-image: url(https://cdn.pixabay.com/photo/2013/10/02/23/03/mountains-190055_1280.jpg);
 	text-align: center;
 	width: 100%;
-	height: auto;
+	height: 30em;
 	background-size: cover;
 	background-attachment: fixed;
 	position: relative;
@@ -90,4 +92,99 @@ h1.headline-txt{
 	text-shadow: 1px 1px 1px #333;
   background-image: linear-gradient( 135deg, #9f05ff69 10%, #fd5e086b 100%);
 	
+}
+
+.navbar {
+  background:transparent;
+  border: none;
+}
+.navbar-inverse .navbar-nav>li>a{
+  color: #FFF;
+  font-weight: bold;
+}
+/* .navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus{
+   color:black !important;
+} */
+
+.caption {
+  position: relative;
+  bottom: 5px;
+  left: 20px;
+  opacity: 0.0;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  color: #ffffff;
+}
+
+.transparent-box {
+  height: auto;
+  width: auto;
+  background-color:rgba(0, 0, 0, 0);
+  position: relative;
+  top: 0;
+  left: 0;
+  transition: background-color 0.3s ease;
+}
+
+.img-gallery:hover img { 
+  transform: scale(1.1);
+  /* border-radius: 20px; */
+
+}
+
+.img-gallery:hover .transparent-box {
+  background-color:rgba(0, 0, 0, 0.5);
+}
+
+.img-gallery:hover .caption {
+  transform: translateY(-20px);
+  opacity: 1.0;
+}
+
+.img-gallery:hover {
+  cursor: pointer;
+}
+
+.caption > p:nth-child(2) {
+  font-size: 0.8em;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -133%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+p.text-center{
+  background-color: #04AA6D;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px; 
+  text-decoration: none;
+}
+
+a:focus, a:hover{
+  text-decoration: none;
+}
+
+
+.img-gallery:hover .middle {
+  opacity: 1;
+}
+
+@media (max-width: 767px) {
+  .nav>li{
+    background-color: #000000; 
+  }
+  .navbar-nav .open .dropdown-menu {
+    background-color: #000000;
+  }
+  .discovermore-center {
+    width: 25%;
+    margin: 0 auto;
+}
 }
