--- a/style.css
+++ b/style.css
@@ -213,14 +213,14 @@ box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.54); */
 
 /* Footer */
 .footer {
-  position: relative;
+/*   position: relative;
   bottom: 0;
   width: 100%;
   height: auto;
   background-color: #cccccc;
   text-align: center;
   color: #000000;
-  padding: 1em;
+  padding: 1em; */
 }
 
  /* End footer */
@@ -304,8 +304,8 @@ box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.54); */
 
 @media (max-width: 767px) {
   .footer{
-   position: relative;
-     top: 47em;
+/*    position: relative;
+     top: 47em; */
   }
  
   .nav>li{
