--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1.headline-txt{
 }
 .header {
 	/* background: url('http://www.autodatz.com/wp-content/uploads/2017/05/Old-Car-Wallpapers-Hd-36-with-Old-Car-Wallpapers-Hd.jpg'); */
-  background-image: url(https://pixabay.com/get/g77556fee0cc4bb720fb483789b4889e0ab6d6ef77fe6563da71fed43d39e8bb5956500ff5d415a7533aea67928547f171cbe7fb65c3c5b5e015b14682a701235_1280.jpg);
+  background-image: url(http://www.autodatz.com/wp-content/uploads/2017/05/Old-Car-Wallpapers-Hd-36-with-Old-Car-Wallpapers-Hd.jpg);
 	text-align: center;
 	width: 100%;
 	height: 30em;
