--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1.headline-txt{
 }
 .header {
 	/* background: url('http://www.autodatz.com/wp-content/uploads/2017/05/Old-Car-Wallpapers-Hd-36-with-Old-Car-Wallpapers-Hd.jpg'); */
-  background-image: url(https://pixabay.com/get/geac3216b78bc85b9fb07de89f5cb94d617b2c423c5e4935f46fb0b0eafb701a33775313cc704fc8b64113a8dd2a1f453fb250749ffe474dfdf8359f82d6d6c68_1280.jpg);
+  background-image: url(sun-rise.jpg);
 	text-align: center;
 	width: 100%;
 	height: 30em;
